syntax = "proto3";

package watchtower;

option go_package = "videoapp/internal/proto";

message AnalyseVideoMessage {
  int64 upload_id = 1;
  int64 video_id = 2;
}

message Empty {}
